feat(sprint3): CI/CD pipeline + JaCoCo + tests event/training/course/exam/planning + Karma Angular